dnl Process this file with autoconf to produce a configure script.
AC_INIT(main.c)

dnl Checks for programs.
AC_PROG_CC

if test "$GCC" = yes; then
	CFLAGS="$CFLAGS -W -Wall";
fi

dnl Checks for libraries.
AC_CHECK_LIB(util, openpty)
AC_CHECK_LIB(socket, socket)

dnl Checks for header files.
AC_HEADER_STDC
AC_CHECK_HEADERS(sys/ioctl.h sys/resource.h pty.h termios.h util.h unistd.h)
AC_CHECK_HEADERS(libutil.h stropts.h)

dnl Checks for typedefs, structures, and compiler characteristics.
AC_TYPE_PID_T

dnl Checks for library functions.
AC_PROG_GCC_TRADITIONAL
AC_TYPE_SIGNAL
AC_CHECK_FUNCS(socket strerror getrlimit)
AC_CHECK_FUNCS(openpty forkpty ptsname grantpt unlockpt)
AC_CONFIG_HEADER(config.h)
AC_OUTPUT(Makefile)
